# slidershim

./: LICENSE.md  README.md  notes.md  package-lock.json  package.json
public/: global.css  index.html
res/layouts/: index.html
res/sshelper/: index.html
src/: App.svelte  Link.svelte  Preview.svelte
src-interception/: Cargo.toml  README.md  build.rs
src-interception/src/: bindings.rs  interception.c  lib.rs
src-lzfx/: Cargo.toml  build.rs
src-lzfx/include/: lzfx.h  lzfxbridge.h
src-lzfx/src/: lib.rs  lzfx.cc  lzfxbridge.cc
src-slider_io/: Cargo.toml  rustfmt.toml
src-slider_io/src/: config.rs  context.rs  controller_state.rs  lib.rs  manager.rs  state.rs  system.rs
src-slider_io/src/device/: brokenithm.rs  config.rs  device.rs  diva.rs  hid.rs  mod.rs
src-slider_io/src/device/brokenithm-www/: app.js  index-ns.html  src.js
src-slider_io/src/input/: brokenithm.rs
src-slider_io/src/input/brokenithm-www/: src.js
src-slider_io/src/lighting/: config.rs  led.rs  lighting.rs  mod.rs  umgr_websocket.rs
src-slider_io/src/output/: config.rs  gamepad.rs  hori.rs  keyboard.rs  mod.rs  output.rs
src-slider_io/src/shared/: hori.rs  mod.rs  serial.rs  utils.rs  voltex.rs  worker.rs
src-slider_io/src/slider_io/: brokenithm.rs  controller_state.rs  gamepad.rs  keyboard.rs  voltex.rs  worker.rs
src-tauri/: Cargo.toml  README.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/res/www/: app.js  config.js  index-go.html  index.html  src.js
src-tauri/src/: build.rs  lib.rs  main.rs  oldlib.rs
src-tauri/src/oldbin/: test_async.rs  test_usb.rs  test_worker.rs
src-tauri/src/slider_io/: acio.rs  brokenithm.rs  config.rs  context.rs  controller_state.rs  device.rs  device_job.rs  gamepad.rs  hid.rs  keyboard.rs  led.rs  manager.rs  mod.rs  output.rs  utils.rs  worker.rs
src-tauri/src/slider_io/brokenithm-www/: app.js  index-go.html  index.html
src-wwserial/: Cargo.toml  README.md  build.rs
src-wwserial/include/: serial.h  serial_win.h  v8stdint.h  wwserial.h
src-wwserial/src/: lib.rs  list_ports_win.cc  serial.cc  serial_win.cc  wwserial.cc
