[package]
name = "slidershim"
version = "0.2.6"
description = "slidershim"
authors = ["4yn"]
license = ""
repository = ""
default-run = "slidershim"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.4", features = [] }

[dependencies]
log = "0.4.14"
simple-logging = "2.0.2"
env_logger = "0.9.0"

parking_lot = "0.12.0"

tauri = { version = "1.0.0-rc.4", features = ["system-tray", "window-start-dragging"] }
open = "2.0.2"

slider_io =  {path = "../src-slider_io" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
